# RustForge

./: .dockerignore  .env.example  .gitignore  .tarpaulin.toml  AGENT.md  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  docker-compose.yml
.cargo/: audit.toml
.sqlx/: query-024d725405e24082b2928c31eef5f62f34742215432bf2b8ff59f646d54db4ef.json  query-0532389e5b5f0f67b20bcda2c30d583467a3016c2f7706d5e8f73349fbecdba2.json  query-053c1f216056cc45a7cf80d2fdbb824c6fd6f4192fe9c7c69315e1743e96e878.json  query-0652c15420090970d4712dd81e12a9518e862941a6320efecc1345d399f6d6b7.json  query-10dc7e1aef683d6ac06321b0b163a181b780cf8d6765f4c2d39ac0321fe45492.json  query-13b6522bc7306d4a90f1924fa8e3a5e86f11e2d318c7b732e6a4f96bf8b384e6.json  query-1448e4b76e08145172422068d6cea4ade49f6e10cd4776b3ba54c01a8469063b.json  query-1740a0d075cfcaa960176816880233327c1d2ed5b4e086abe9feab2165d2bb4b.json  query-19c9de86db88b33e7e44de1bfb84045f151548afdf32a531caf509784e07522f.json  query-1dcb27b7642af46b617591f1304e2fcc690a145ada56bafb29cee70c131e1092.json  query-1ed016ffc806e26744bfdb2baca14103a14ec6bbd871852c47e38e8af6e5cb99.json  query-1f53715cf7620de2a811effff35040218cf96912be6472585e56db2c61c48d3b.json  query-248e54c1931e9d8116a980f5ef168b23ebbb3f62c54553b8c968c40c6e10b241.json  query-2c34242667dfbb076569b34ab388491167533e9c44773fc1f1b58a086be65b84.json  query-39f69033f84a5d0468fa091b37f04424de426d2c17d8cebaa7ca0581f8ab8e98.json  query-3e40f3364f35d552166227d3be67f404160edf224f13ad55a70745bc52663782.json  query-414a6f5b3b4a52e9938f48e7d6cf8ac37a204019a0f3ba1ea9d162e30fd6760e.json  query-4cdaefcf874a3c375d2dd001b5ab0c98ccfe4186abcc0648f4a91cf56a8ddb3b.json  query-4d1bbf7733a6f90860b61b4a5271f740af7c2df6602815c47e392489b86aafd8.json  query-4ff440df5c5b5f337cce0a8234af4813ee8ce55c8c0debc76b4276347fda1eda.json  query-52ac172eae803288405d27fea7fbe9461888e0708a2e9aa69ff7a7204fe1472f.json  query-5658fcc965cbe4addb5ee4306d57778a311ca6d40aba89cc7d3dc5e0d18e83df.json  query-56b06dc039fcd8474a9d723eeee23d0b9a31f0fba8c594e2fd10e71fcdb92739.json  query-59f66026c3e7c9d3ce3e31179584ad93d0099f80429362d50684332e5b855762.json  query-62c0e31f54751988a299e2f564dfb4aab7640658e7261a3519eff811595dbb16.json  query-66839414e1fe18ac2ead9d1d257a39ca89571d10b2ecb73310976ee76ec9d191.json  query-676250267cf15a38489b841fb4da1626f8783b800c84553c98c727e7d9a54175.json  query-67e3328ff3890f2bb69bf16db563aee831ae5bd82014608e11dd7934a4f089e4.json  query-6b94347a8fde3da2c63049945e16fbc730f81f2caf602e2cf43e17b527a02530.json  query-6bec2a70dc10ed0ef82eb33b004663a425b67ffc035c96e7e355310f77b72895.json  query-725f2c165c8c045f913726d55696633e726ca91b9cd846647658a6a561576006.json  query-738dfd8381ecac895b8944a367b0025f9ebd528df539ada266aebf8550f0398d.json  query-7564bbc0984f680ee325c08cc36fa572b2874145effbb24eb1088d519d62e052.json  query-765a00676c3bead58bc92d1a8e992e4cef06dc3b0a6bd7c316d3613b59188137.json  query-76d4df207cb377fe3c30bfbe2dbc4abe1b1961ae387ebe44737673b223dd8955.json  query-79f3f091e7b346cda12471016f002d943dcb2ac8143965a4dfc202c8cc621949.json  query-7bb57cb36c516b98b7f66d3e5414cd683e194f423df4ea621a3118d9d02b8d4a.json  query-7e7893c909bfbdbf7e2395c773bc2a4909d1bdbec05922a75e0b150fd3be89e6.json  query-8784d1c59b4fcf82f045e05ed0edbad0aa37436f25e7b21040fd30ad3caf308b.json  query-8c267494e055a521da20fb5aa4bb0c1b5fad4066e96a8ecdddf2a839f6f8c051.json  (+31 more)
benchmarks/: load-test.k6.js
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: api_doc.rs  app.rs  error.rs  lib.rs  main.rs  state.rs  upload.rs
crates/api/src/extractors/: auth_user.rs  mod.rs  session.rs
crates/api/src/middleware/: mod.rs  origin_check.rs  rate_limit.rs  request_id.rs
crates/api/src/routes/: auth.rs  category.rs  contact.rs  enrollment.rs  health.rs  metrics.rs  mod.rs  payment.rs  review.rs  stats.rs  user.rs
crates/api/src/routes/workshop/: levels.rs  mod.rs
crates/api/tests/: enrollment_concurrency.rs  health_test.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs  slug.rs
crates/application/src/services/: auth.rs  category.rs  contact.rs  enrollment.rs  level.rs  mod.rs  payment.rs  review.rs  stats.rs  user.rs  workshop.rs
crates/application/tests/: enrollment_payment_tests.rs  services_tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  events.rs  lib.rs
crates/domain/src/aggregates/: category.rs  contact.rs  enrollment.rs  level.rs  mod.rs  payment.rs  refund_log.rs  review.rs  user.rs  workshop.rs
crates/domain/src/repositories/: audit.rs  category.rs  contact.rs  enrollment.rs  job.rs  level.rs  mod.rs  otp.rs  payment.rs  refund_log.rs  review.rs  session.rs  stats.rs  user.rs  workshop.rs
crates/domain/src/services/: email_sender.rs  mod.rs  object_store.rs  payment_gateway.rs
crates/domain/src/value_objects/: email.rs  ids.rs  mod.rs  money.rs  otp.rs  transaction_id.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/email/: mod.rs
crates/infrastructure/src/jobs/: mod.rs  queue.rs
crates/infrastructure/src/object_store/: mod.rs  s3.rs
crates/infrastructure/src/payment/: mod.rs
crates/infrastructure/src/pdf/: mod.rs
crates/infrastructure/src/postgres/: mod.rs  pool.rs
crates/infrastructure/src/postgres/repos/: audit.rs  category.rs  contact.rs  enrollment.rs  event_store.rs  job.rs  level.rs  mod.rs  otp.rs  payment.rs  refund_log.rs  review.rs  session.rs  stats.rs  user.rs  workshop.rs
crates/infrastructure/tests/: postgres_integration.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  crypto.rs  error.rs  lib.rs  logging.rs  metrics.rs  object_store.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
crates/worker/src/handlers/: cleanup.rs  generate_invoice.rs  mod.rs  send_email.rs
docs/: grafana-dashboard.json  schema.md
migrations/: 20260711134701_enums.up.sql  20260711134702_users_sessions.up.sql  20260711134703_catalog.up.sql  20260711134704_enrollment_payment.up.sql  20260711134705_review_contact.up.sql  20260711134706_audit_jobs.up.sql
scripts/: sqlx-prepare.sh
(+7 files in other folders)
