[workspace]
members = [
    "crates/shared",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/api",
    "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v7", "serde"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
figment = { version = "0.10", features = ["env", "toml"] }
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
async-trait = "0.1"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
subtle = "2"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18"
aws-sdk-s3 = { version = "1", features = ["rt-tokio"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
infer = "0.19"

