[workspace]
members = [
    "crates/shared",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/api",
    "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }

axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v7", "serde"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
figment = { version = "0.10", features = ["env", "toml"] }
validator = { version = "0.19", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
async-trait = "0.1"
argon2 = "0.5"
sha2 = "0.11"
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
cookie = "0.18"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
infer = "0.19"
moka = { version = "0.12", features = ["future"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
tera = { version = "2", features = ["glob_fs"] }
printpdf = "0.11"

proptest = "1"
pretty_assertions = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "minio"] }
wiremock = "0.6"
mockall = "0.13"

utoipa = { version = "5", features = ["axum_extras", "uuid"] }

