[package]
name = "sw-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sw-application = { version = "0.1", path = "../application" }
sw-domain = { version = "0.1", path = "../domain" }
sw-infrastructure = { version = "0.1", path = "../infrastructure" }
sw-shared = { version = "0.1", path = "../shared" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
tracing.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
cookie.workspace = true
sqlx.workspace = true
infer.workspace = true
reqwest.workspace = true

[dev-dependencies]
http-body-util = "0.1"
