[package]
name = "sw-application"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sw-domain = { path = "../domain" }
sw-shared = { path = "../shared" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
serde_json.workspace = true
moka.workspace = true
