[package]
name = "sw-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sw-shared = { version = "0.1", path = "../shared" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
