[package]
name = "sw-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sw-domain = { path = "../domain" }
sw-shared = { path = "../shared" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
