[package]
name = "sw-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sw-domain = { version = "0.1", path = "../domain" }
sw-shared = { version = "0.1", path = "../shared" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
lettre.workspace = true
tera.workspace = true
printpdf.workspace = true
