[package]
name = "sw-shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
figment.workspace = true
validator.workspace = true
chrono.workspace = true
tokio.workspace = true
argon2.workspace = true
sha2.workspace = true
rand.workspace = true
subtle.workspace = true
hex.workspace = true
async-trait.workspace = true
